--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -46,3 +46,21 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+// Button & input reset
+
+button {
+  margin:0;
+	border:0;
+	padding:0;
+	display:inline-block;
+	vertical-align:middle;
+	white-space:normal;
+	background:none;
+	line-height:1;
+	font-size: 100%;
+	font-family: inherit;
+	color: inherit;
+	outline: 0;
+}
