--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,600');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:400,800');
+
 
 body {
-  font-family: 'Quicksand', serif;
+  font-family: 'Inconsolata', monospace;
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.3;
-  color: #2d3436;
+  // line-height: 1.3;
+  background-color: $bg-color;
+  color: $base-font-color;
 }
+
+
