--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
 @import 'reset';
-@import 'base';
+@import 'variables';
 @import 'typography';
+@import 'layout';
+@import 'buttons';
+@import 'timer';
+@import 'results';
